--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,16 +1,26 @@
 <% provide(:title, 'All Project') %>
-<h1>All Projects</h1>
-
-<ul class="project">
-  <% @projects.each do |project| %>
-    <li>
-      <%= link_to project.project_name, project %>
-      <%= project.plan_time%>
-      <%= project.real_time%>
-      <%= link_to "Edit", edit_project_path(project) %> | 
-      <%= link_to "delete", project, method: :delete,
-                                  data: { confirm: "You sure?" } %>
-    </li>
-  <% end %>
-</ul>
-<%= link_to "Them du an", management_path, class: "btn btn-lg btn-primary" %>
+<div class="row">
+  <div class="col-sm-2  sidebar" id ="navigation">
+    <ul class="nav nav-sidebar">
+      <li class="active"><%= link_to "Thong tin ca nhan"%></li>
+      <li class="active"><%= link_to "Quan li nhan vien!"%></li>
+      <li class="active"><%= link_to "Quan li du an!", projects_path%></li>
+    </ul>
+  </div>
+  <div class="col-sm-10 col-sm-offset-2">
+   <h1>All Projects</h1>
+    <ul class="project">
+      <% @projects.each do |project| %>
+        <li>
+          <%= link_to project.project_name, project %>
+          <%= project.plan_time%>
+          <%= project.real_time%>
+          <%= link_to "Edit", edit_project_path(project) %> | 
+          <%= link_to "delete", project, method: :delete,
+                                      data: { confirm: "You sure?" } %>
+        </li>
+      <% end %>
+    </ul>
+    <%= link_to "Them du an", management_path, class: "btn btn-primary" %>  
+  </div>
+</div>
