--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,17 +1,27 @@
 <% provide(:title, 'Them') %>
-<h1>Them project</h1>
-
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@project) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <%= f.label :project_name,"Project:" %>
-      <%= f.text_field :project_name, class: 'form-control'  %>
+  <div class="col-sm-2  sidebar" id ="navigation">
+    <ul class="nav nav-sidebar">
+      <li class="active"><%= link_to "Thong tin ca nhan"%></li>
+      <li class="active"><%= link_to "Quan li nhan vien!"%></li>
+      <li class="active"><%= link_to "Quan li du an!", projects_path%></li>
+    </ul>
+  </div>
+  <div class="col-sm-10 col-sm-offset-2">
+    <h1>Them project</h1>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-2">
+        <%= form_for(@project) do |f| %>
+          <%= render 'shared/error_messages' %>
+          <%= f.label :project_name,"Project:" %>
+          <%= f.text_field :project_name, class: 'form-control'  %>
 
-      <%= f.label :plan_time ,"Thoi gian du dinh:"%>
-      <%= f.text_field :plan_time, class: 'form-control' %>
+          <%= f.label :plan_time ,"Thoi gian du dinh:"%>
+          <%= f.text_field :plan_time, class: 'form-control' %>
 
-      <%= f.submit "Them project moi", class: "btn btn-primary" %>
-    <% end %>
+          <%= f.submit "Them project moi", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>   
   </div>
 </div>
