--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,12 @@
-<%= @project.project_name %>, <%= @project.plan_time %>,<%= @project.real_time %>
+<div class="container">
+	<div class="row">
+		<ul>
+			<li class="project_name"><%= @project.project_name %></li>
+			<ul>
+				<li>Thoi gian du kien : <%= @project.plan_time %></li>
+				<li>Thoi gian da lam : <%= @project.real_time %></li>
+			</ul>
+		</ul>
+		<%= link_to "Back", projects_path, class: "btn btn-primary" %>
+	</div>
+</div>
