--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-sm-2  sidebar" id ="navigation">
     <ul class="nav nav-sidebar">
-      <li class="active"><%= link_to "Thong tin ca nhan"%></li>
+      <li class="active"><%= link_to "Thong tin ca nhan", current_user%></li>
       <li class="active"><%= link_to "Quan li nhan vien!"%></li>
       <li class="active"><%= link_to "Quan li du an!", projects_path%></li>
     </ul>
