--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,22 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
         <li><%= link_to "Help",    help_path %></li>
-        <li><%= link_to "Log in", "https://slack.com/oauth/authorize?scope=chat:write:bot+users:read&client_id=2760961654.22987639603&redirect_uri=http://localhost:3000/report"%></li>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", '#' %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log in", 'https://slack.com/oauth/authorize?scope=chat:write:bot+users:read&client_id=2760961654.22987639603&redirect_uri=http://localhost:3000/report'%></li>
+        <% end %>
       </ul>
     </nav>
   </div>
